wow and animate added to front page regions

--- a/bullensteeg.libraries.yml
+++ b/bullensteeg.libraries.yml
@@ -10,3 +10,19 @@ fonts:
   css:
     theme:
       '//fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet': { type: external, minified: true }
+
+animatestyle:
+  css:
+    theme:
+      bower_components/animate.css/animate.css: {}
+      
+frontjs:
+  js:
+    bower_components/wow/dist/wow.min.js: {}
+    js/wow-init.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal.ajax
+    - core/drupal
+    - core/drupalSettings
+    - core/jquery.once
