theme to gulp4 and remove all not used java css to dist  Changes to be committed: 	modified:   .gitignore 	deleted:    bower.json 	modified:   bullensteeg.info.yml 	modified:   bullensteeg.libraries.yml 	new file:   css/styles.css 	new file:   dist/css/styles.css 	new file:   dist/css/styles.css.map 	new file:   dist/images/about-us.JPG 	new file:   dist/images/for_html/about-us.JPG 	new file:   dist/images/for_html/ben.jpg 	new file:   dist/images/for_html/front-img.jpg 	new file:   dist/images/for_html/marleen.png 	new file:   dist/images/for_html/mystic-v.jpg 	new file:   dist/images/for_html/mystic.jpg 	new file:   dist/images/for_html/news.JPG 	new file:   dist/images/for_html/pup03.jpg 	new file:   dist/images/for_html/pups.jpg 	new file:   dist/images/for_html/reu.JPG 	new file:   dist/images/for_html/teef-izora.jpg 	new file:   dist/images/for_html/teef-lollypop.jpg 	new file:   dist/images/for_html/teef-pepper.jpg 	new file:   dist/images/for_html/teef-queen.jpg 	new file:   dist/images/for_html/teef1.JPG 	new file:   dist/images/front-img.jpg 	new file:   dist/images/marleen.jpg 	new file:   dist/images/pups.jpg 	new file:   favicon.ico 	modified:   gulpfile.js 	deleted:    js/email.js 	deleted:    js/wow-init.js 	modified:   package-lock.json 	modified:   package.json 	modified:   templates/partials/front-page/header-front.html.twig 	modified:   templates/partials/shared/footer.html.twig

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,1 @@
-.idea/
-
-# Build Systems #
-########################
-node_modules
-bower_components
-docker-compose.yml
-css/
-build/
-dist/
-.vscode
-readme.txt
+node_modules/*
